--- a/TME6/TME6_Cosentino_Aralov.ipynb
+++ b/TME6/TME6_Cosentino_Aralov.ipynb
@@ -218,7 +218,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Your answer..."
+    "**Answer**:\n",
+    "We are classifying pixels into 3 categories:\n",
+    "1. Corners where both gradients Ix and Iy are large (giving large positive response)\n",
+    "2. Flat areas, where both gradients Ix and Iy are small (giving response which has small modulus)\n",
+    "3. Edges where either Ix is large and Iy is small or Ix is small and Iy is large (giving negative response which has large modulus)."
    ]
   },
   {
@@ -283,9 +287,26 @@
     "                    res[i, j] = 1\n",
     "    return res\n",
     "\n",
-    "# def rnms(image_harris):\n",
-    "#     \"\"\" Array[n, m] -> Array[n, m] \n",
-    "#     \"\"\"\n"
+    "######## BONUS ##############\n",
+    "\n",
+    "\n",
+    "def rnmsROLL(image_harris, binarize):\n",
+    "    \"\"\" Array[n, m] -> Array[n, m] \n",
+    "    \"\"\"\n",
+    "\n",
+    "    above = np.roll(image_harris, shift=-1, axis=0)\n",
+    "    below = np.roll(image_harris, shift=1, axis=0)\n",
+    "    left = np.roll(image_harris, shift=-1, axis=1)\n",
+    "    right = np.roll(image_harris, shift=1, axis=1)\n",
+    "    above_left = np.roll(above, shift=-1, axis=1)\n",
+    "    above_right = np.roll(above, shift=1, axis=1)\n",
+    "    below_left = np.roll(below, shift=-1, axis=1)\n",
+    "    below_right = np.roll(below, shift=1, axis=1)\n",
+    "\n",
+    "    O = (image_harris>above) & (image_harris>below) & (image_harris>left) & (image_harris>right) & (\n",
+    "                image_harris>above_left) & (image_harris>above_right) & (image_harris>below_left) & (\n",
+    "                    image_harris>below_right)\n",
+    "    return np.where(binarize==1, O, 0)\n"
    ],
    "outputs": [],
    "execution_count": 5
@@ -384,7 +405,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": "**Answer**: It's able to detect the corners fairly good given that we choose right threshold value."
   },
   {
    "cell_type": "markdown",
@@ -591,13 +612,6 @@
     "1) It is rotation-invariant\n",
     "2) When using the same threshold, it is invariant to affine transformation of brightness. But we could rescale the threshold by the factor of scaling brightness to the power of 4: if $I' = \\alpha I + \\beta$ and $t$ is the threshold for $I$, then $t' = \\alpha^4 t$ -- is the threshold for $I'$ which gives the same corners."
    ]
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": ""
   }
  ],
  "metadata": {
